@@ -30,26 +30,6 @@ dependencies {
     implementation "org.apache.flink:flink-connector-datagen:${flinkVersion}"
 }
 
-task runSparkSensorJob(type: JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'dev.faro.e2e.SparkSensorJob'
-    jvmArgs(
-        '--add-opens=java.base/java.lang=ALL-UNNAMED',
-        '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
-        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
-        '--add-opens=java.base/java.io=ALL-UNNAMED',
-        '--add-opens=java.base/java.net=ALL-UNNAMED',
-        '--add-opens=java.base/java.nio=ALL-UNNAMED',
-        '--add-opens=java.base/java.util=ALL-UNNAMED',
-        '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
-        '--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED',
-        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
-        '--add-opens=java.base/sun.nio.cs=ALL-UNNAMED',
-        '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
-        '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
-        '--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED'
-    )
-}
 
 shadowJar {
     archiveBaseName = 'faro-e2e'
